kubernetes/ejercicios/autoestudio_con_ejercicios_propios/greet/kubernetes/code/ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greet-pod-default
  labels:
    app: greet
spec:
  containers:
    - name: greet
      image: eduard2diaz/greet:storage
