kubernetes/ejercicios/autoestudio_con_ejercicios_propios/greet/kubernetes/code/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greet-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myapp-endpoint.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                #name debe coincidir con el nombre del service
                name: greet-internal-service
                port:
                  #port debe coincidir con el puerto interno del service
                  number: 80
